# parish_news

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml  run.bat  run.sh
backend/: manage.py
backend/news/: models.py  tests.py  urls.py  views.py
backend/news/tests/: testes_views.py  tests_models.py
backend/paroquia_news/: asgi.py  settings.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py
church/: admin.py  middleware.py  models.py
church/migrations/: 0001_initial.py  0002_church_primary_color_church_secondary_color.py  0002_priest_function.py  0003_church_confessions_church_email_church_opening_hours_and_more.py  0004_alter_church_options_alter_priest_options.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  theme.ts  types.d.ts
frontend/src/components/layout/: MainLayout.tsx
frontend/src/pages/: Home.tsx  NewsDetail.tsx
frontend/src/services/: api.ts  news.ts
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_initial.py  0003_alter_news_church.py  0004_alter_category_slug.py
news/templates/news/: about.html  base.html  category_list.html  home.html  index.html  news_detail.html  news_list.html  priest.html  test_colors.html
nginx/: nginx.conf
paroquianews/: asgi.py  settings.py  urls.py  views.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
